fixed contact alignment (changed UL/LI to H4)

--- a/main.css
+++ b/main.css
@@ -50,10 +50,6 @@ footer {
   margin-bottom: 0px;
 }
 
-li {
-  list-style: none;
-}
-
 .quiz-app {
   height: 50%;
   width: 50%;
